fix play host dockerfile; check for cookies in play host; update play board alignment

--- a/packages/web-client/src/views/Play/play.css
+++ b/packages/web-client/src/views/Play/play.css
@@ -77,7 +77,6 @@ body.wrong .play-card .border {
 
 
 .play-board {
-    align-items: center;
     display: flex;
     flex: 1;
     flex-direction: column;
@@ -88,6 +87,10 @@ body.wrong .play-card .border {
 
     @mixin breakpoint-up medium {
         padding-top: 0;
+    }
+
+    @mixin breakpoint-up large {
+        align-items: center;
     }
 }
 
